--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-navbar></app-navbar>
+<app-navbar [menuItem]="item" (handelOutput)="sendOutput($event)"></app-navbar>
 <router-outlet></router-outlet>
